Dark mode: Sort by styling fix

--- a/public/stylesheets/darkstyle.css
+++ b/public/stylesheets/darkstyle.css
@@ -273,3 +273,5 @@ body{
     background-color: #3a80c1;
     border-color: #3a80c1;
 }
+
+#dropdownMenuButton { margin-top: 13px; }
